config file and virtualthreadpool